unix/lang/tests/error/error_long_libname.yab
#expect# To be seen

import library6e